# e-cert

./: .editorconfig  README.md
e-cert/: README.md  logistic_regression.py  polynomial_regression.py  pyproject.toml
e-cert/e_cert/: __main__.py  base.py  data_generators.py  demo.py  elasticnet.py  logistic_regression.py  polynomial_regression.py
