[project]
name = "e-cert"
version = "0.1.0"
description = "Snippet for E cert"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imgcat>=0.6.0",
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "jupytext>=1.16.6",
]
